--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
 	<title>iUI</title>
 </head>
 <body>
-	<p>aaa</p>
+	<div id="TOP">
+		<img id="logoimg" src="Rec/iUI_logo_width.png">
+		<p id="toptext">iUI—WebUI</p>
+		<div id="sets">settings</div>
+	</div>
+	<div id="MID">
+		<div id="MIDL" class="mid">
+			<div id="hs" >展开收起</div>
+			<div id="ME">
+				<div id="01" class="MER">
+					<div id="1" class="MEF">开始</div>
+					<div id="001" class="MES">首页</div>
+				</div>
+			</div>
+		</div>
+		<div id="MIDM" class="mid"> 
+			WEWE 
+		</div>
+		<div id="MIDR" class="mid">
+	 		 EWEWR
+		</div>
+	</div>
 </body>
 </html>
