--- a/index.html
+++ b/index.html
@@ -4,26 +4,19 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 	<link rel="stylesheet" href="Css/index.css">
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="Js/index.js"></script>
 	<title>iUI</title>
 </head>
 <body>
 	<div id="TOP">
-		<img id="logoimg" src="Rec/iUI_logo_width.png">
+		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png">
 		<p id="toptext">iUI—WebUI</p>
 		<div id="sets">settings</div>
 	</div>
 	<div id="MID">
-		<div id="MIDL" class="mid">
-			<div id="hs" >展开收起</div>
-			<div id="ME">
-				<div id="01" class="MER">
-					<div id="1" class="MEF">开始</div>
-					<div id="001" class="MES">首页</div>
-				</div>
-			</div>
-		</div>
+		<div id="MIDL" class="mid"></div>
 		<div id="MIDM" class="mid"> 
-			WEWE 
+		  WEWEfgrdgdfg 
 		</div>
 		<div id="MIDR" class="mid">
 	 		 EWEWR
