--- a/Rec/Pages/ME.html
+++ b/Rec/Pages/ME.html
@@ -1,5 +1,12 @@
-	<img id="showhide" src="null">
-	<div id="menuBar">
+<!doctype html>
+<html>
+<head>
+	<link href="../../Css/index.css" rel="stylesheet">
+</head>
+<body id="body1">
+	<div id="MIDLL">
+		<img id="showhide" src="null">
+		<div id="menuBar">
 		<div class="block" id="111">
 			<div class="blockt">节标题一</div>
 			<div class="menus" id="00">目录一</div>
@@ -14,17 +21,6 @@
 		</div>
 	</div>
 
-
-<style>
-	html,body{
-		margin: 0;
-		padding: 0;
-		height: 100%;
-		width: 100%;
-	}
-	#showhide{
-		margin:6px 6px 6px auto;
-		height: 48px;
-		width: 48px;
-	}
-</style>
+	</div>
+</body>
+</html>
