--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="Js/index.js"></script>
 	<title>iUI</title>
 </head>
-<body>
+<body class="body">
 	<div id="TOP">
 		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png">
 		<p id="toptext">iUI—WebUI</p>
