--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 		<div id="sets">settings</div>
 	</div>
 	<div id="MID">
-		<div id="MIDL" class="mid"></div>
+		<div id="MIDL" class="mid">
+			<div id="MIDLT">
+				<img id="showhide" src="Rec/Imgs/arrow_L.png">
+			</div>
+			<div id="MIDLB"></div>
+	  </div>
 		<div id="MIDM" class="mid"> 
 		  WEWEfgrdgdfg 
 		</div>
@@ -22,5 +27,6 @@
 	 		 EWEWR试试
 		</div>
 	</div>
+	<div id="BOT"></div>
 </body>
 </html>
