--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="body">
 	<div id="TOP">
-		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png">
-		<p id="toptext">iUI—WebUI</p>
+		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png">:
+		<p id="toptext">iUI—工程模式</p>
 		<div id="sets">settings</div>
 	</div>
 	<div id="MID">
@@ -21,7 +21,13 @@
 			<div id="MIDLB"></div>
 	  </div>
 		<div id="MIDM" class="mid"> 
-		  WEWEfgrdgdfg 
+			<div id="MIDMT">为我</div>
+			<hr id="MIDMhr">
+		  <div id="MIDMB">
+				<button id="pageUP">上一页</button>
+				<button id="pageDOWN">下一页</button>
+				<p id="msg">这里显示信息。</p>
+			</div>
 		</div>
 		<div id="MIDR" class="mid">
 	 		 EWEWR试试
