--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
 			<div id="MIDMT">为我</div>
 			<hr id="MIDMhr">
 		  <div id="MIDMB">
-				<button id="pageUP">上一页</button>
-				<button id="pageDOWN">下一页</button>
+				<button class="Btns" id="pageUP">上一页</button>
+				<button class="Btns" id="pageDOWN">下一页</button>
 				<p id="msg">这里显示信息。</p>
 			</div>
 		</div>
 		<div id="MIDR" class="mid">
-	 		 EWEWR试试
+	 		<div id="MIDRR">
+				shili
+			</div>
 		</div>
 	</div>
 	<div id="BOT"></div>
