--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
 	<div id="TOP">
-		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png">:
+		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png">
 		<p id="toptext">iUI—工程模式</p>
 		<div id="sets">settings</div>
 	</div>
@@ -35,6 +35,5 @@
 			</div>
 		</div>
 	</div>
-	<div id="BOT"></div>
 </body>
 </html>
