--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
 <head>
+	<html lang="ZH">
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 	<link rel="stylesheet" href="Css/index.css">
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="Js/index.js"></script>
 	<title>iUI</title>
+	<link rel="icon" href="Rec/Imgs/iUI logo.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="Rec/Imgs/iUI logo.png" type="image/x-icon"/>
 </head>
 <body class="body">
 	<div id="TOP">
