--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-	<html lang="ZH">
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 	<link rel="stylesheet" href="Css/index.css">
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -12,20 +11,20 @@
 </head>
 <body class="body">
 	<div id="TOP">
-		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png">
+		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png" />
 		<p id="toptext">iUI—工程模式</p>
 		<div id="sets">settings</div>
 	</div>
 	<div id="MID">
 		<div id="MIDL" class="mid">
 			<div id="MIDLT">
-				<img id="showhide" src="Rec/Imgs/arrow_L.png">
+				<img id="showhide" src="Rec/Imgs/arrow_L.png" />
 			</div>
 			<div id="MIDLB"></div>
 	  </div>
 		<div id="MIDM" class="mid"> 
 			<div id="MIDMT">为我</div>
-			<hr id="MIDMhr">
+			<div id="MIDMhr"></div>
 		  <div id="MIDMB">
 				<button class="Btns" id="pageUP">上一页</button>
 				<button class="Btns" id="pageDOWN">下一页</button>
