--- a/Rec/Pages/ME.html
+++ b/Rec/Pages/ME.html
@@ -1,30 +1,28 @@
-<!doctype html>
-<html>
-<head>
-	<link href="../../Css/index.css" rel="stylesheet">
-</head>
-<body id="body1">
-	<div id="MIDLL">
-		<div id="menuBar">
-			<div class="block" id="111">
-				<div class="blockt">节标题一</div>
+<div id="MIDLL">
+	<div id="menuBar">
+			<div class="block">
+				<div class="blockt" id="a1">节标题一</div>
+				<div class="menusb" id="a11">
+				<div class="menus">目录一</div>
+				<div class="menus">目录二</div>
+				<div class="menus">目录三</div>
+				</div>
+			</div>
+			<div class="block">
+				<div class="blockt">节标题二</div>
+				<div class="menusb" id="a11">
 				<div class="menus" id="00">目录一</div>
 				<div class="menus" id="00">目录二</div>
 				<div class="menus" id="00">目录三</div>
+				</div>
 			</div>
 			<div class="block" id="11">
 				<div class="blockt">节标题二</div>
+				<div class="menusb" id="a11">
 				<div class="menus" id="00">目录一</div>
-				<div class="menus" id="00">目录二</div>
+				<div class="menus" id="00">目录</div>
 				<div class="menus" id="00">目录三</div>
-			</div>
-			<div class="block" id="11">
-				<div class="blockt">节标题二</div>
-				<div class="menus" id="00">目录一</div>
-				<div class="menus" id="00">目录二</div>
-				<div class="menus" id="00">目录三</div>
+				</div>
 			</div>
 		</div>
-	</div>
-</body>
-</html>
+</div>
