--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
 <!doctype html>
 <html>
 <head>
+	<meta name="baidu-site-verification" content="code-KD9mnaXaxv" />
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
-	<link rel="stylesheet" href="Css/index.css">
-	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="Js/index.js"></script>
-	<title>iUI</title>
-	<link rel="icon" href="Rec/Imgs/iUI logo.png" type="image/x-icon" />
-	<link rel="shortcut icon" href="Rec/Imgs/iUI logo.png" type="image/x-icon"/>
+	<title>IUI</title>
+	<link rel="icon" href="Recourse/IMGs/logo.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="Recourse/IMGs/logo.png" type="image/x-icon"/>
 </head>
-<body class="body">
-	<div id="TOP">
-		<img id="logoimg" src="Rec/Imgs/iUI_logo_width.png" />
-		<p id="toptext">iUI—工程模式</p>
-		<div id="sets">settings</div>
-	</div>
-	<div id="MID">
-		<div id="MIDL" class="mid">
-			<div id="MIDLT">
-				<img id="showhide" src="Rec/Imgs/arrow_L.png" />
+<body>
+	<div id="hover">
+		<p>遮罩</p>
+    </div>
+	<div id="body">
+		<div id="left">
+			<div id="Ltop">
+				<img id="Llogo" src="Recourse/IMGs/logow.png" />
 			</div>
-			<div id="MIDLB"></div>
-	  </div>
-		<div id="MIDM" class="mid"> 
-			<div id="MIDMT">为我</div>
-			<div id="MIDMhr"></div>
-		  <div id="MIDMB">
-				<button class="Btns" id="pageUP">上一页</button>
-				<button class="Btns" id="pageDOWN">下一页</button>
-				<p id="msg">这里显示信息。</p>
+			<div id="Lmid">
+				<div id="menubar">&nbsp;</div>
+			</div>
+			<div id="Lbot">
+				工程模式
 			</div>
 		</div>
-		<div id="MIDR" class="mid">
-	 		<div id="MIDRR">
-				shili
-			</div>
+		<div id="right">
+			
 		</div>
 	</div>
 </body>
+	<link rel="stylesheet" type="text/css" href="CSS/index.css">
+	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="JS/index.js"></script>
 </html>
