--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 	<div id="hover">
-		<p>遮罩</p>
+		<div id="Htost">
+			<p>建设中，请稍后访问</p>
+			<button id="Hhid">好的</button>
+		</div>
     </div>
 	<div id="body">
 		<div id="left">
@@ -17,18 +20,19 @@
 				<img id="Llogo" src="Recourse/IMGs/logow.png" />
 			</div>
 			<div id="Lmid">
-				<div id="menubar">&nbsp;</div>
+					<div id="menubar"></div>
 			</div>
 			<div id="Lbot">
 				工程模式
 			</div>
 		</div>
 		<div id="right">
-			
+			dd
 		</div>
 	</div>
 </body>
 	<link rel="stylesheet" type="text/css" href="CSS/index.css">
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="JS/index.js"></script>
+	<script src="JS/style.js"></script>
 </html>
