--- a/Pages/menu.html
+++ b/Pages/menu.html
@@ -11,4 +11,4 @@
 <div class="menus" id="003">目录示例</div>
 <div class="menus" id="004">目录示例</div>
 <div class="menus" id="005">目录示例</div>
-<div class="menus" id="006">目录示例</div>
+<div class="menus" id="006">Menus</div>
