--- a/Pages/menu.html
+++ b/Pages/menu.html
@@ -1,14 +1,14 @@
+<!doctype html>
 <link rel="stylesheet" type="text/css" href="CSS/menus.css" >
-
 <div class="menus" id="001">目录示例</div>
 <div class="menus" id="002">目录示例</div>
 <div class="menus" id="003">目录示例</div>
 <div class="menus" id="004">目录示例</div>
 <div class="menus" id="005">目录示例</div>
 <div class="menus" id="006">目录示例</div>
-<div class="menus" id="001">目录示例</div>
-<div class="menus" id="002">目录示例</div>
-<div class="menus" id="003">目录示例</div>
-<div class="menus" id="004">目录示例</div>
-<div class="menus" id="005">目录示例</div>
-<div class="menus" id="006">Menus</div>
+<div class="menus" id="007">目录示例</div>
+<div class="menus" id="008">目录示例</div>
+<div class="menus" id="009">目录示例</div>
+<div class="menus" id="010">目录示例</div>
+<div class="menus" id="011">目录示例</div>
+<div class="menus" id="012">Menus</div>
