--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta name="baidu-site-verification" content="code-KD9mnaXaxv" />
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 	<title>IUI</title>
-	<link rel="icon" href="Recourse/IMGs/logo.png" type="image/x-icon" />
-	<link rel="shortcut icon" href="Recourse/IMGs/logo.png" type="image/x-icon"/>
-	<link rel="stylesheet" type="text/css" href="CSS/index.css">
+	<link rel="icon" href="./Recourse/IMGs/logo.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="./Recourse/IMGs/logo.png" type="image/x-icon"/>
+	<link rel="stylesheet" type="text/css" href="./Css/index.css">
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="JS/index.js"></script>
-	<script src="JS/style.js"></script>
+	<script src="./Js/index.js"></script>
+	<script src="./Js/style.js"></script>
 </head>
 <body>
 	<div id="hover">
